# cpp-foundation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  common.hpp
tests/: CMakeLists.txt  thread_safe_queue_test.cpp  thread_safe_thread_test.cpp  thread_safe_variable_test.cpp  thread_safe_wait_test.cpp
thread_safe/: CMakeLists.txt  common.hpp  queue.hpp  thread.cpp  thread.hpp  variable.hpp  wait.cpp  wait.hpp
